--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: rgb(145, 200, 225);
+    font-family: "Barriecito", system-ui;
 }
 .container{
     max-width: 400px;
@@ -9,11 +10,16 @@ body{
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
-    font-family: Arial, sans-serif;
+    font-family: "Barriecito", system-ui;
     color: #333;  
 }
+.barriecito-regular {
+  font-family: "Barriecito", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
 h2{
-    margine-top: 0;
+    margin-top: 0;
     color:#333;
     text-align: center;   
 }
@@ -28,7 +34,9 @@ button{
     margin-top: 5px;
     border:none;
     border-radius: 5px;
-    background-color: #d1c1d7;   
+    background-color: #d1c1d7; 
+    font-family: "Barriecito", system-ui;
+     font-size: large;  
 }
 label{
     font-size: large;
